--- a/CourseManagement/Views/Courses/List.cshtml
+++ b/CourseManagement/Views/Courses/List.cshtml
@@ -25,7 +25,7 @@
             }
         </div>
         <div class="card-header pl-2">
-            <h5 class="title">Danh sách Khóa học</h5>
+            <h5 class="text-bold">Danh sách Khóa học</h5>
         </div>
         <div class="card-body pt-2">
             <div class="table-responsive mb-2">
