--- a/CourseManagement/Views/Index/Register.cshtml
+++ b/CourseManagement/Views/Index/Register.cshtml
@@ -13,8 +13,8 @@
         <div class="card-body">
             <form id="frmRegister">
                 <span asp-validation-for="MessageRegister" class="error-message"></span>
-                <div id="dvFullName" class="input-group mb-1">
-                    <input type="text" asp-for="FullName" class="form-control" autocomplete="off" placeholder="Họ tên">
+                <div id="dvUserName" class="input-group mb-1">
+                    <input type="text" asp-for="UserName" class="form-control" autocomplete="off" placeholder="Họ tên">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-user"></span>
