--- a/CourseManagement/Views/Enrollments/_SearchResults.cshtml
+++ b/CourseManagement/Views/Enrollments/_SearchResults.cshtml
@@ -1,38 +1,34 @@
-﻿@using CourseManagement.Domain.Courses.Helpers
+﻿@using CourseManagement.Domain.Enrollments.Helpers
 @using CourseManagement.Helpers
 @model SearchResult[]
 
 @if (Model.Length > 0) foreach (var result in Model)
 {
     <tr>
+        <td>@result.EnrollmentTime.ToString(WebConstants.DATE_TIME_FORMAT_VN)</td>
         <td>@result.CourseCode</td>
         <td>@result.CourseName</td>
-        <td class="text-right">@result.Duration.ToString("#,###")</td>
-        <td>@result.StartDate.ToString(WebConstants.DATE_FORMAT_VN)</td>
-        <td>@result.EndDate.ToString(WebConstants.DATE_FORMAT_VN)</td>
         <td>
             <span class="badge badge-@((result.Status == 0) ? "warning" : (result.Status == 1) ? "primary" : (result.Status == 2) ? "success" : "danger")">
                 @ValueTextHelper.GetCourseStatusText(result.Status.ToString())
             </span>
         </td>
+        <td>@result.Price.ToString("#,###")</td>
         <td>@result.Lecturer</td>
-        <td>@result.CreatedAt.ToString(WebConstants.DATE_TIME_FORMAT_VN)</td>
+        @if (User.IsInRole("Admin"))
+        {
+            <td>@result.UserName</td>
+        }
         <td class="text-center">
             <a href="@WebConstants.PAGE_COURSES_REGISTER/@result.CourseId" class="btn btn-info btn-sm">
                 <i class="fas fa-eye"></i>
             </a>
-            @if (User.IsInRole("Admin"))
-            {
-                <button class="btn btn-danger btn-sm" onclick="deleteCourse(@result.CourseId, '@result.CourseCode')">
-                    <i class="fas fa-trash"></i>
-                </button>
-            }
         </td>
     </tr>
 }
 else
 {
     <tr>
-        <td class="error-message" colspan="9">@ErrorMessageHelper.NoDataFound</td>
+        <td class="error-message" colspan="@(User.IsInRole("Admin") ? 8 : 7)">@ErrorMessageHelper.NoDataFound</td>
     </tr>
 }
