--- a/CourseManagement/Views/Users/_Register.cshtml
+++ b/CourseManagement/Views/Users/_Register.cshtml
@@ -16,8 +16,8 @@
                     <div class="col-md-6">
                         <div class="row mb-2">
                             <div class="col-md-12">
-                                <label asp-for="FullName" class="required">Họ tên</label>
-                                <input asp-for="FullName" type="text" class="form-control" maxlength="100" autocomplete="off" />
+                                <label asp-for="UserName" class="required">Họ tên</label>
+                                <input asp-for="UserName" type="text" class="form-control" maxlength="100" autocomplete="off" />
                             </div>
                         </div>
                         <div class="row mb-2">
