Implement: Create column CourseImage, CourseFile

--- a/CourseManagement/Views/Shared/_Layout.cshtml
+++ b/CourseManagement/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="../../plugins/toastr/toastr.min.css">
         <link rel="stylesheet" href="../../css/site.css?v=@(WebConstants.CLIENT_VERSION)">
+        <!-- dropzonejs -->
+        <link rel="stylesheet" href="../../plugins/dropzone/min/dropzone.min.css">
         <!-- Shortcut icon -->
         <link rel="shortcut icon" href="../../dist/img/shortcut-icon.png" />
     </head>
