--- a/CourseManagement/Views/Courses/Register.cshtml
+++ b/CourseManagement/Views/Courses/Register.cshtml
@@ -50,19 +50,28 @@
                     </div>
                 </div>
                 <div class="row mb-2">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label asp-for="CourseImage">Hình ảnh</label>
                         <br />
                         <div class="custom-file">
-                            <input type="file" accept="image/*" class="custom-file-input" onchange="displayImage()" id="CourseImage">
+                            <input type="file" accept="image/*" class="custom-file-input" onchange="uploadImage()" id="CourseImage">
                             <label class="custom-file-label" for="CourseImage">Chọn hình ảnh</label>
                         </div>
                         <div class="col-auto">
-                            <img id="imagePreview" class="img-lg d-none">
+                            <img id="imagePreview" class="img-lg mt-2" @(!string.IsNullOrEmpty(Model.CourseImage) ? $"src={Model.CourseImage}" : string.Empty)>
                         </div>
                         <div class="col d-flex align-items-center">
                             <p id="imageInfo" class="col d-flex align-items-center"></p>
                         </div>
+                    </div>
+                    <div class="col-md-9">
+                        <label asp-for="CourseFile">File đính kèm</label>
+                        <br />
+                        <div class="custom-file">
+                            <input type="file" multiple accept="*" class="custom-file-input" onchange="uploadFiles()" id="CourseFile">
+                            <label class="custom-file-label" for="CourseFile">Chọn file</label>
+                        </div>
+                        <div id="fileList"></div>
                     </div>
                 </div>
 
