--- a/CourseManagement/Views/Courses/List.cshtml
+++ b/CourseManagement/Views/Courses/List.cshtml
@@ -32,6 +32,7 @@
                 <table class="table table-bordered table-hover" id="tblCourses">
                     <thead>
                         <tr>
+                            <th rowspan="2">Hình ảnh</th>
                             <th rowspan="2" class="table-sort" data-sort-by="CourseCode">Mã khóa học</th>
                             <th rowspan="2" class="table-sort" data-sort-by="CourseName">Tên khóa học</th>
                             <th colspan="3">Thời gian</th>
